# AD

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  Dockerfile  README.md  api.http  compose.yaml  entrypoint.sh  producer.py  pyproject.toml  requirements.txt  ЛР5.md
app/: cache.py  data.py  db.py  main.py  models.py  rabbit_app.py  redis.py  scheduler.py  sql_queries.py
app/controllers/: __init__.py  order_controller.py  product_controller.py  report_controller.py  user_controller.py
app/repositories/: __init__.py  address_repository.py  order_report_repository.py  order_repository.py  product_repository.py  user_repository.py
app/schemas/: __init__.py  order.py  product.py  report.py  user.py
app/services/: __init__.py  order_report_service.py  order_service.py  product_service.py  user_service.py
migrations/: env.py
migrations/versions/: 244329ed368a_.py  4a46ef2a64bd_order_reports_table.py  9f179f775a85_order_items_and_product_stock.py  ff23fce66210_.py
tests/: conftest.py
tests/test_models/: test_orders_and_products.py
tests/test_repositories/: test_order_repository.py  test_product_repository.py  test_user_repository.py
tests/test_routes/: test_product_and_order_routes.py  test_user_routes.py
tests/test_services/: test_order_service.py  test_product_service.py  test_user_service.py
