[project]
name = "my_database_project"
version = "0.1.0"
description = "Database project"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "litestar>=2.10.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.7.4",
]
